Fix vertical bars without changing linespacing

--- a/css/shCore.css
+++ b/css/shCore.css
@@ -32,7 +32,7 @@
   float: none !important;
   height: auto !important;
   left: auto !important;
-  line-height: 1.3em !important;
+  line-height: 1.1em !important;
   margin: 0 !important;
   outline: 0 !important;
   overflow: visible !important;
@@ -58,6 +58,7 @@
   position: relative !important;
   overflow: auto !important;
   font-size: 1em !important;
+  overflow-y: hidden !important;
 }
 .syntaxhighlighter.source {
   overflow: hidden !important;
